--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year 2025 Greetings</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <canvas id="canvas"></canvas>
@@ -12,8 +12,8 @@
     <div class="quote" id="quote">"Your fight this year is over, you have done your best. Let's prepare to do great things together in 2025."</div>
     <div class="instruction">Click anywhere to see the text!</div>
     <audio autoplay loop style="display:none;">
-        <source src="Gustixa - lemon tree.mp3" type="audio/mp3">
+        <source src="sound/Gustixa - lemon tree.mp3" type="audio/mp3">
     </audio>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
